# speedtest-fetcher

./: CMakeLists.txt  README.md  fetch_servers  query_planner.cpp
.github/workflows/: cmake-multi-platform.yml
